// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SqlManagementConf/Detail/index.tsx should display error message when data request fails 1`] = `
<div>
  <div
    class="actiontech-page-header-namespace css-1xspr0w"
  >
    <div
      class="title"
    >
      静态扫描 智能扫描详情
    </div>
    <div
      class="extra"
    >
      <a
        href="/sqle/project/700300/sql-management-conf"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span>
            返回智能扫描配置
          </span>
        </button>
      </a>
    </div>
  </div>
  <div
    class="ant-result ant-result-error css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-result-icon"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-result-title"
    >
      请求错误
    </div>
    <div
      class="ant-result-subtitle"
    >
      error
    </div>
  </div>
</div>
`;

exports[`test SqlManagementConf/Detail/index.tsx should match snapshot 1`] = `
<div>
  <div
    class="actiontech-page-header-namespace css-1xspr0w"
  >
    <div
      class="title"
    >
      静态扫描 智能扫描详情
    </div>
    <div
      class="extra"
    >
      <a
        href="/sqle/project/700300/sql-management-conf"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span>
            返回智能扫描配置
          </span>
        </button>
      </a>
    </div>
  </div>
  <div
    class="segmented-tabs-wrapper"
  >
    <div
      class="ant-row segmented-row-wrapper flex-space-between css-156vlto css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-segmented basic-segmented-wrapper css-192b3m1 css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-segmented-group"
        >
          <label
            class="ant-segmented-item ant-segmented-item-selected"
          >
            <input
              checked=""
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="概览"
            >
              概览
            </div>
          </label>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        />
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                class="custom-icon custom-icon-refresh"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 246px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              智能扫描类型
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              审核规则模板
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              任务状态
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              连接信息
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              采集到的SQL数
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              审核有问题的SQL数
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              最近一次采集时间
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="8"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test SqlManagementConf/Detail/index.tsx should match snapshot 2`] = `
<div>
  <div
    class="actiontech-page-header-namespace css-1xspr0w"
  >
    <div
      class="title"
    >
      mysql-1 智能扫描详情
    </div>
    <div
      class="extra"
    >
      <a
        href="/sqle/project/700300/sql-management-conf"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span>
            返回智能扫描配置
          </span>
        </button>
      </a>
    </div>
  </div>
  <div
    class="segmented-tabs-wrapper"
  >
    <div
      class="ant-row segmented-row-wrapper flex-space-between css-156vlto css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-segmented basic-segmented-wrapper css-192b3m1 css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-segmented-group"
        >
          <label
            class="ant-segmented-item ant-segmented-item-selected"
          >
            <input
              checked=""
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="概览"
            >
              概览
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="自定义"
            >
              自定义
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="MySQL库表元数据"
            >
              MySQL库表元数据
            </div>
          </label>
          <label
            class="ant-segmented-item"
          >
            <input
              class="ant-segmented-item-input"
              type="radio"
            />
            <div
              class="ant-segmented-item-label"
              title="阿里RDS MySQL慢日志"
            >
              阿里RDS MySQL慢日志
            </div>
          </label>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        />
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                class="custom-icon custom-icon-refresh"
                height="14"
                viewBox="0 0 14 14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.187 2.586a5.833 5.833 0 0 1 8.59 7.762L9.918 7h1.75a4.667 4.667 0 0 0-7.899-3.367zm7.626 8.828a5.833 5.833 0 0 1-8.59-7.762L4.083 7h-1.75a4.667 4.667 0 0 0 7.899 3.367z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="lazy-load-wrapper segmented-item-content lazy-load-wrapper-show css-952l0m"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-fxd6ka css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 246px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              智能扫描类型
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              审核规则模板
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              任务状态
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              连接信息
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              采集到的SQL数
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              审核有问题的SQL数
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              最近一次采集时间
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                class="ant-typography css-dev-only-do-not-override-bj9uhl"
                              >
                                库表元数据
                              </a>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/sqle/rule-manager/global-detail/default_MySQL/MySQL"
                                target="_blank"
                              >
                                default_MySQL
                              </a>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="css-10kos8e"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m-.665-2.666L4.507 7.838l.942-.943 1.886 1.886 3.771-3.771.943.943z"
                                    fill="#1CB889"
                                  />
                                </svg>
                                <span>
                                  启用
                                </span>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              0
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              0
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              2024-08-06 11:30:43
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              >
                                <div
                                  class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                                >
                                  <div
                                    class="ant-space-item"
                                    style="margin-right: 8px;"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      disabled=""
                                      type="button"
                                    >
                                      <span>
                                        启 用
                                      </span>
                                    </button>
                                  </div>
                                  <div
                                    class="ant-space-item"
                                    style="margin-right: 8px;"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      type="button"
                                    >
                                      <span>
                                        停 用
                                      </span>
                                    </button>
                                  </div>
                                  <div
                                    class="ant-space-item"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      type="button"
                                    >
                                      <span>
                                        删 除
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                class="ant-typography css-dev-only-do-not-override-bj9uhl"
                              >
                                慢日志
                              </a>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/sqle/project/700300/rule/template/detail/mysql_rule_template/MySQL"
                                target="_blank"
                              >
                                mysql_rule_template
                              </a>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="css-10kos8e"
                              >
                                <svg
                                  fill="none"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
                                    stroke="#7D8CA8"
                                    stroke-width="1.5"
                                  />
                                  <path
                                    d="m5.917 5.917 4.166 4.166M5.917 10.083l4.166-4.166"
                                    stroke="#7D8CA8"
                                    stroke-linejoin="round"
                                    stroke-width="1.5"
                                  />
                                </svg>
                                <span>
                                  停用
                                </span>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <span
                                class="css-1sg2lsz"
                              >
                                <div
                                  class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    <span
                                      class="rect-border-wrapper css-1iiq8r2"
                                    >
                                      <svg
                                        height="16"
                                        viewBox="0 0 16 16"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M11.333 9.333H8.44A4.002 4.002 0 0 1 .667 8a4 4 0 0 1 7.772-1.333h6.894v2.666H14V12h-2.667zm-6.666 0a1.333 1.333 0 1 0 0-2.666 1.333 1.333 0 0 0 0 2.666"
                                          fill="#8A8F99"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </div>
                                <span
                                  class="ant-typography css-dev-only-do-not-override-bj9uhl"
                                >
                                  <div
                                    aria-label="Copy"
                                    class="ant-typography-copy"
                                    role="button"
                                    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                                    tabindex="0"
                                  >
                                    <span
                                      aria-label="copy"
                                      class="anticon anticon-copy"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="copy"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </span>
                              </span>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              0
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              0
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              >
                                <div
                                  class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                                >
                                  <div
                                    class="ant-space-item"
                                    style="margin-right: 8px;"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      type="button"
                                    >
                                      <span>
                                        启 用
                                      </span>
                                    </button>
                                  </div>
                                  <div
                                    class="ant-space-item"
                                    style="margin-right: 8px;"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      disabled=""
                                      type="button"
                                    >
                                      <span>
                                        停 用
                                      </span>
                                    </button>
                                  </div>
                                  <div
                                    class="ant-space-item"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      type="button"
                                    >
                                      <span>
                                        删 除
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                class="ant-typography css-dev-only-do-not-override-bj9uhl"
                              >
                                processlist 列表
                              </a>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/sqle/rule-manager/global-detail/default_MySQL/MySQL"
                                target="_blank"
                              >
                                default_MySQL
                              </a>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="css-10kos8e"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m-.665-2.666L4.507 7.838l.942-.943 1.886 1.886 3.771-3.771.943.943z"
                                    fill="#1CB889"
                                  />
                                </svg>
                                <span>
                                  启用
                                </span>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              0
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              0
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              >
                                <div
                                  class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                                >
                                  <div
                                    class="ant-space-item"
                                    style="margin-right: 8px;"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      disabled=""
                                      type="button"
                                    >
                                      <span>
                                        启 用
                                      </span>
                                    </button>
                                  </div>
                                  <div
                                    class="ant-space-item"
                                    style="margin-right: 8px;"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      type="button"
                                    >
                                      <span>
                                        停 用
                                      </span>
                                    </button>
                                  </div>
                                  <div
                                    class="ant-space-item"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      type="button"
                                    >
                                      <span>
                                        删 除
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="4"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                class="ant-typography css-dev-only-do-not-override-bj9uhl"
                              >
                                自定义
                              </a>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <a
                                href="/sqle/rule-manager/global-detail/default_MySQL/MySQL"
                                target="_blank"
                              >
                                default_MySQL
                              </a>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              <div
                                class="css-10kos8e"
                              >
                                <svg
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m-.665-2.666L4.507 7.838l.942-.943 1.886 1.886 3.771-3.771.943.943z"
                                    fill="#1CB889"
                                  />
                                </svg>
                                <span>
                                  启用
                                </span>
                              </div>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              0
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              0
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              -
                            </td>
                            <td
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              style="position: sticky; right: 0px;"
                            >
                              <div
                                class="css-new95e"
                              >
                                <div
                                  class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                                >
                                  <div
                                    class="ant-space-item"
                                    style="margin-right: 8px;"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      disabled=""
                                      type="button"
                                    >
                                      <span>
                                        启 用
                                      </span>
                                    </button>
                                  </div>
                                  <div
                                    class="ant-space-item"
                                    style="margin-right: 8px;"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      type="button"
                                    >
                                      <span>
                                        停 用
                                      </span>
                                    </button>
                                  </div>
                                  <div
                                    class="ant-space-item"
                                  >
                                    <button
                                      class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                      type="button"
                                    >
                                      <span>
                                        删 除
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
